# job_search

./: .gitignore  README.md
source_code/algo_java/: KNOWLEDGE_COVERAGE.md  README.md  TESTING.md  pom.xml
source_code/algo_py/: KNOWLEDGE_COVERAGE.md  README.md  (+2 more)
source_code/py_proj/: README.md  TESTING.md  pyproject.toml
source_code/py_proj/docs/: test-scenarios.md
source_code/py_proj/src/py_proj/: __init__.py  basics.py  concurrency.py  control_flow.py  cpython_runtime.py  data_structures.py  descriptors_metaclasses.py  exceptions_io.py  functional.py  import_system.py  iterators_generators.py  modules_packages.py  oop.py  performance.py  production.py  project_structure.py  regex_usage.py  stdlib_utils.py  testing_logging.py  type_hints.py
source_code/py_proj/tests/: __init__.py  test_basics.py  test_concurrency.py  test_control_flow.py  test_cpython_runtime.py  test_data_structures.py  test_descriptors_metaclasses.py  test_exceptions_io.py  test_functional.py  test_import_system.py  test_iterators_generators.py  test_modules_packages.py  test_oop.py  test_performance.py  test_production.py  test_project_structure.py  test_regex_usage.py  test_stdlib_utils.py  test_testing_logging.py  test_type_hints.py
source_code/regex_proj/: README.md  pyproject.toml
source_code/regex_proj/docs/: knowledge_coverage.md
source_code/regex_proj/src/regex_proj/: __init__.py  assertions.py  dialects.py  engine.py  groups.py  operations.py  patterns.py  quantifiers.py  redos.py  review.py
source_code/regex_proj/tests/: test_regex_knowledge.py
算法/: 算法学习资料.md  算法学习路线图.md
(+1560 files in other folders)
